# wappalyzer

./: Cargo.toml  readme.md
src/: lib.rs  main.rs  wapp.rs
