[package]
name = "wappalyzer"
version = "0.1.0"
authors = ["Iustin Ladunca - Garrett Hunyadi <garrett@pobox.com>"]
edition = "2021"
description = "Identifies technologies used on a web page using a headless browser"
license = "MIT OR Apache-2.0"


[dependencies]
serde = { version = "1.0.99", features = ["derive"] } 
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
lazy_static = "1.4.0"
regex = "1"
tokio = { version = "1.21.0", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
url = "2.1.1"
headless_chrome = {git = "https://github.com/iustin24/rust-headless-chrome", features = ["fetch"]}
scraper = "0.10.1"
